--- a/Mreg5.Rmd
+++ b/Mreg5.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Wie schätz man variierende Slopes und Cross-Level Interaktionen?“"
+title: "Wie schätzt man variierende Slopes und Cross-Level Interaktionen?"
 subtitle: "Videoserie Mehrebenenregression Teil 5/6"
 author: "Dr. Uwe Remer"
 date: "Juli 2022"
@@ -64,13 +64,14 @@ DIV.border {
 
 # Themenüberblick
 
-Hallo und herzlich Willkommen zum vierten Teil der Videoserie zum Thema Mehrebenenregression in R. 
+Hallo und herzlich Willkommen zum fünften Teil der Videoserie zum Thema Mehrebenenregression in R. 
  
-Die Fragestellung für dieses Video lautet: Wie findet man das passende Modell für die Mehrebenenregression? 
+Die Fragestellung für dieses Video lautet: Wie schätzt man variierende Slopes und Cross-Level Interaktionen? 
 
-'###### Wie werden die Daten für eine Mehrebenregression vorbereitet?
+Und daran anschließend: Wie findet man das eigentlich das passende Modell für die Mehrebenenregression? Welche der Varianten ist am Ende die angemessene?
 
-Im vorigen Video 3 haben wir das einfache Varying Intercept Modell geschätzt. Wir haben Prädiktoren auf Ebene 1 und 2 berücksichtigt und die Fixed Effects und die Random Effects interpretiert.
+
+Im vorigen Video 4 haben wir das einfache Varying Intercept Modell geschätzt. Wir haben Prädiktoren auf Ebene 1 und 2 berücksichtigt und die Fixed Effects und die Random Effects interpretiert.
 
 In diesem Video wird es darum gehen, wie man das passende Modell aus den möglichen Varianten findet. 
 Dazu erweitern wir das Varying Intercept Modell zunächst um einen Varying Slope und danach um eine Cross Level Interaktion. 
@@ -86,30 +87,29 @@ Die konkreten Lernziele sind, dass Sie...
 
 Dazu wechseln wir nun zu R.
 
-Bevor wir mit dem neuen Modell loslegen, führen Sie bitte das komplette RScript zu Video 3 aus `RScript_mreg3.R`. Mit der `source()`-Funktion können Sie das direkt aus R heraus laufen lassen. 
+# Variierende Intercepts und variierende Slopes
+
+Bevor wir mit dem neuen Modell loslegen, führen Sie bitte das komplette RScript zu Video 4 aus `RScript_mreg4.R`. Mit der `source()`-Funktion können Sie das direkt aus R heraus laufen lassen. 
 
 ```{r}
-source("./RScript_mreg3.R") #Pfad zur Datei ggf. anpassen
+source("./RScript_mreg4.R") #Pfad zur Datei ggf. anpassen
 ```
 
-Wir sehen zwar keinen Output, aber den benötigen wir auch nicht. Wir wollen nur die Objekte im Environment haben, insbesondere, den fertig vorbereiteten ESS Datensatz. 
 
-Unsere erste Forschungsfrage lautet ja: 
+Legen wir los... Unsere erste Forschungsfrage lautet ja: 
 
 > Welchen Einfluss hat Bildung auf politisches Vertrauen?
 
-Im letzten Video haben das Grundmodell mit variierenden Intercepts geschätzt. Und eine vorläufige Antwort auf die Forschungsfrage war: Bildung hat auf Individualebene einen negativen Effekt auf politisches Vertrauen. Das Bildungsniveau eines Landes beeeinflusst dessen Niveau an politischem Vertrauen jedoch nicht.
+Im letzten Video haben das Grundmodell mit variierenden Intercepts geschätzt. Und eine vorläufige Antwort auf die Forschungsfrage war: Bildung hat auf Individualebene einen negativen Effekt auf politisches Vertrauen. Das Bildungsniveau eines Landes beeinflusst dessen Niveau an politischem Vertrauen jedoch nicht.
 
-Aber: Wir haben ja bereits gesehen, dass der datengenerierende Prozess Kontextabhängig ist. SO könnte es auch sein, dass der Effekt der Variable `bildung` nicht in allen Ländern gleich wirkt!
+Aber: Wir haben ja bereits gesehen, dass der datengenerierende Prozess Kontextabhängig ist. So könnte es auch sein, dass der Effekt der Variable `bildung` nicht in allen Ländern gleich wirkt!
 
 Es wäre ja denkbar, dass der negative Effekt in manchen Ländern stärker und in anderen schwächer ausfällt.
 
 Genau das können wir mit eine Varying Intercept, Varying Slope Modell testen.
 
 
-# Variierende Intercepts und variierende Slopes
-
-Das Varying Intercept, Varying Slope Modell wird manchmal auch Random Intercept, Random Slope Modell gennant. 
+Das Varying Intercept, Varying Slope Modell wird manchmal auch Random Intercept, Random Slope Modell genannt. 
 
 Die Idee ist, dass der Effekt eines Ebene 1 Prädiktors zwischen den Kontexteinheiten variieren darf. 
 
@@ -181,16 +181,16 @@ Dessen Beitrag an der Gesamtvarianz ist mit einer Varianz von <font color=red>$0
 
 Bevor wir das Modell also inhaltlich interpretieren, müssen wir prüfen, ob dieser variierende Slope tatsächlich gerechtfertigt ist. Oder anders ausgedrückt: Ist die Annahme eines zwischen den Ländern variierenden Regressionskoeffizienten für Bildung überhaupt empirisch haltbar? 
 
-Was uns also interessiert ist, ob wir überhaupt einen signifkanten Random Effect für Bildung haben. Oder ob dem datengenerierenden Prozess nicht eher ein einheitlicher Bildungseffekt zu Grunde liegt.
+Was uns also interessiert ist, ob wir überhaupt einen signifikanten Random Effect für Bildung haben. Oder ob dem datengenerierenden Prozess nicht eher ein einheitlicher Bildungseffekt zu Grunde liegt.
 
-Um das festzustellen prüfen wir, ob das Modell mit dem variirenden Intercept - `mreg3`- besser zu den Daten passt, als das Modell ohne diesen variirenden Intercept (Modell `mreg2`).  
+Um das festzustellen prüfen wir, ob das Modell mit dem variierenden Intercept - `mreg3`- besser zu den Daten passt, als das Modell ohne diesen variierenden Intercept (Modell `mreg2`).  
 
 
 ## Modellvergleich mittels Anova 
 
 Üblicherweise vergleichen wir zwei Modelle mit der `anova()`-Funktion. 
 
-Die Anova testet die Nullhypothese, dass die beiden Modelle gleich gut oder schlecht zu den Daten passen. Ist der Test signifikant, wird die Nullhypothese also zurückgeweisen, wissen wir, dass das eine Modell eine bessere Anpassung an die Daten hat.
+Die Anova testet die Nullhypothese, dass die beiden Modelle gleich gut oder schlecht zu den Daten passen. Ist der Test signifikant, wird die Nullhypothese also zurückgewiesen, wissen wir, dass das eine Modell eine bessere Anpassung an die Daten hat.
 
 Werden zwei OLS Modelle verglichen, basiert die Anova auf einem F-Test der Fehlerqaudrate der beiden Modelle.
 
@@ -216,22 +216,22 @@ mreg <- lmer(y ~ 1 + x + (1 + grp),
 
 Wenn man `REML=FALSE` angibt, wird statt des REML-Schätzers der einfache ML-Schätzer genutzt.
 
-Der ML-Schätzer wählt dabei diejenigen Werte für die  Modellparamter, bei denen die Wahscheinlichkeit (Likelihood) am größten ist, die Werte der Daten zu beobachten. Wähle das Modell, beim dem $p(Daten|Modell)$ am größten ist.
+Der ML-Schätzer wählt dabei diejenigen Werte für die  Modellparamter, bei denen die Wahrscheinlichkeit (Likelihood) am größten ist, die Werte der Daten zu beobachten. Wähle das Modell, beim dem $p(Daten|Modell)$ am größten ist.
 
 Dabei können aber die Varianzparameter unterschätzt werden.
 
 Beim REML-Schätzer werden nur die Parameter der Varianzkomponenten, also die Random Effects des Modells über den ML-Schätzer gewählt. Die anderen Modellparamter werden als gegeben angenommen (sie werden zuvor automatisch seperat geschätzt). Die Schätzung des REML Schätzers ist also restricted auf die Varianzkomponenten. Und soll dadurch e eine unverzerrte Schätzung der Varianzkomponenten erlauben.
 
-ABER: Je größer die SP, desto weniger ist die Schätzung der Vaianzkomponenten mittels ML-Schätzer verzerrt.
+ABER: Je größer die SP, desto weniger ist die Schätzung der Varianzkomponenten mittels ML-Schätzer verzerrt.
 Diese Eigenschaft ist dann wichtig, wenn Sie folgende Fehlermeldung bei der Schätzung ihres Modells erhalten. 
-Dann lässt sich das Modell nicht mit dem REML Schätzer berechnen. Bei ausreichend größeren Fallzahlen können Sie versuchen dass Modell mit dem ML Schätzer zu fitten, also `REML=FALSE`.
+Dann lässt sich das Modell nicht mit dem REML Schätzer berechnen. Bei ausreichend größeren Fallzahlen können Sie versuchen, das Modell mit dem ML Schätzer zu fitten, also `REML=FALSE`.
 
 
-OK, kurz durchatmrn, dann kommen wir zurück zur einfachen Anwendung. 
+OK, kurz durchatmen, dann kommen wir zurück zur einfachen Anwendung. 
 
 Kommen wir zurück zum Modellvergleich mit der Anova.
 
-Durch die Eigenschaft der REML-Schätzung darf die log-Likelihood zwischen Modellen mit unterschiedlichen fixed Effects nicht verglichen werden - und damit darf auch die Devianz, also die Differenz zwischen zwei Modellen, nicht berechnet werden. Diese ist abre die Grundlage für den $\chi^2$-Test der Anova.
+Durch die Eigenschaft der REML-Schätzung darf die log-Likelihood zwischen Modellen mit unterschiedlichen fixed Effects nicht verglichen werden - und damit darf auch die Devianz, also die Differenz zwischen zwei Modellen, nicht berechnet werden. Diese ist aber die Grundlage für den $\chi^2$-Test der Anova.
 
 Sollen zwei Modelle mit unterschiedlichen fixed Effects verglichen werden, müssen diese Modelle mit dem ML-Schätzer gefittet sein. 
 
@@ -258,12 +258,12 @@ Wir müssen der Anova also sagen, dass sie nicht refitten soll: das geschieht mi
 anova(mreg2, mreg3, refit=F)
 ```
 
-Auch hier sehen wir, dass die log-Likelihodd im zweiten Modell geringer ist - also besser ist - und zwar so viel, dass der $\chi^2$-Test bei zwei Freiheitsgraden signifikant ist. `mreg3` ist also signifikant besser als`mreg2` - wir haben also signifikante Varianz im random Slope für Bildung und können das Modell nun auch inhaltlich interpretieren!
+Auch hier sehen wir, dass die log-Likelihood im zweiten Modell geringer ist - also besser ist - und zwar so viel, dass der $\chi^2$-Test bei zwei Freiheitsgraden signifikant ist. `mreg3` ist also signifikant besser als`mreg2` - wir haben also signifikante Varianz im random Slope für Bildung und können das Modell nun auch inhaltlich interpretieren!
 
 
 ## Interpretation des Varying Slope Modells
 
-Der Fixed Effect für Bildung sagt uns nun wie groß der durchschnittliche Bildungseffekt $\gamma_{10}$ ist: $-0.034$. Dieser Effekt ist signifikant. Also haben wir über ale Länder hinweg einen leicht negativen Effekt für Bildung. 
+Der Fixed Effect für Bildung sagt uns nun wie groß der durchschnittliche Bildungseffekt $\gamma_{10}$ ist: $-0.034$. Dieser Effekt ist signifikant. Also haben wir über alle Länder hinweg einen leicht negativen Effekt für Bildung. 
 
 Interessant ist nun aber, wie stark sich die Effekte zwischen den Länder unterscheiden. Denn: wir haben ja einen variierenden Effekt, dessen Varianz bei $0.002$ liegt!
 
@@ -302,11 +302,11 @@ Die Frage die sich hier stellt: Warum ist das so? Und wir haben ja schon eine Hy
 
 Könnte es also sein, dass das Ausmaß an Korruption in einem Land diese Variation des Random Slope erklären kann?
 
-Der Effekt des Individualmerklmals Bildung ist ein Effekt auf Ebene 1 - auch wenn die größe dieses Ebene 1 Effektes zwischen den Ländern variiert.
+Der Effekt des Individualmerkmals Bildung ist ein Effekt auf Ebene 1 - auch wenn die Größe dieses Ebene 1 Effektes zwischen den Ländern variiert.
 
-Korruption messen wir dabei als Kontextmerkmal auf Ebene 2. Wir haben für jedes Land einen Wert für den Transparency International Korruptiosindex.
+Korruption messen wir dabei als Kontextmerkmal auf Ebene 2. Wir haben für jedes Land einen Wert für den Transparency International Korruptionsindex.
 
-Wenn diese Ebene 2 Variable also einen Effekt auf Ebene 1 beeiflusst ist das ein sogenannter Cross-Level Interaktionseffekt. Interatkion deshalb, weil ein Effekt einen anderen Effekt beeinflusst, alsi mit ihm interagiert.
+Wenn diese Ebene 2 Variable also einen Effekt auf Ebene 1 beeinflusst ist das ein sogenannter Cross-Level Interaktionseffekt. Interatkion deshalb, weil ein Effekt einen anderen Effekt beeinflusst, also mit ihm interagiert.
 
 
 Das ergänzen wir nun in der Regressionsgleichung für diesen variierenden Slope ergänzen. 
@@ -327,15 +327,15 @@ $+u_{1j}$
 </p>
 </div>
 
-<font color=red>$\gamma_{11j}$</font> ist dabei der Regressionskoeffizient der Variable "Korruptionsindex", also der Einfluss der Variable "Korruptionsindesx" auf den variierende Slope der Variable Bildung $\beta_{1j}$.
+<font color=red>$\gamma_{11j}$</font> ist dabei der Regressionskoeffizient der Variable "Korruptionsindex", also der Einfluss der Variable "Korruptionsindex" auf den variierende Slope der Variable Bildung $\beta_{1j}$.
 
 Wenn $\gamma_{11j}$ tatsächlich einen Erklärungsbeitrag für die Variation des random Effects der Variable Bildung hat, dann müsste auch die Residualvarianz $u_{1j}$ geringer werden.
 
 Schauen wir uns das im Modell an:
 
-Wir schätzen also unser neuen Modell, und für die Cross-Level Interaktion müssen wir nur einen ganz regulären Interaktionseffekt in der Formel spezifizieren. R weiß dann von ganz alleine, dass die eine Variable auf Ebene 1 ist und die andere Variable auf Ebene 2.
+Wir schätzen also unser neues Modell, und für die Cross-Level Interaktion müssen wir nur einen ganz regulären Interaktionseffekt in der Formel spezifizieren. R weiß dann von ganz alleine, dass die eine Variable auf Ebene 1 ist und die andere Variable auf Ebene 2.
 
-Wir schätzen das Modell und schaeun dann mit der Anova, ob das Modell signifikant besser an die Daten angepasst ist als das vorige. Da sich die fixierten Effekte verändert haben, müssen wir die ML-basierte Anova nutzen.
+Wir schätzen das Modell und schauen dann mit der Anova, ob das Modell signifikant besser an die Daten angepasst ist als das vorige. Da sich die fixierten Effekte verändert haben, müssen wir die ML-basierte Anova nutzen.
 
 ```{r cross_level_interaktion}
 mreg4 <- lmer(pol_vertrauen ~ 1 + bildung + 
@@ -362,25 +362,39 @@ summary(mreg4)
 
 
 Wir sehen bei den fixed Effects nun einen signifikanten Interaktionseffekt von $`r fixef(mreg4)[8]`$.
-Das bedeutet, das mit Zunahme der Korruption um einen Skalenpunkt verändert sich der Effekt von Bilung um den Faktor $`r fixef(mreg4)[8]`$. Je höher die Korruption ist, desto negativer wird der Effekt von Bildung. Und umgekehrt: je weniger Korruption in einem Land herrscht, desto positiver wird der Effekt von Bildung auf politisches Vertrauen.
+Das bedeutet, das mit Zunahme der Korruption um einen Skalenpunkt verändert sich der Effekt von Bildung um den Faktor $`r fixef(mreg4)[8]`$. Je höher die Korruption ist, desto negativer wird der Effekt von Bildung. Und umgekehrt: je weniger Korruption in einem Land herrscht, desto positiver wird der Effekt von Bildung auf politisches Vertrauen.
 
-Da es sich bei Interaktionseffekten um bedingte Effekte handelt, dürfen wir auch den Haupteffekt von Bildung nur in Abhängigkeit der Korruptionsvariable interpretieren - der Haupteffetk von Bildung ist der Effekt den man beobachtet, wenn die Interaktionsvariable den Wert $0$ hat. Also: in einem ein Land, das keine Korruption hat, bzw. das sehr subaer ist, hat Bildung keinen signifikanten Effekt auf politisches Vertrauen.
+Da es sich bei Interaktionseffekten um bedingte Effekte handelt, dürfen wir auch den Haupteffekt von Bildung nur in Abhängigkeit der Korruptionsvariable interpretieren - der Haupteffekt von Bildung ist der Effekt den man beobachtet, wenn die Interaktionsvariable den Wert $0$ hat. Also: in einem ein Land, das keine Korruption hat, bzw. das sehr sauber ist, hat Bildung keinen signifikanten Effekt auf politisches Vertrauen.
 
-Man kann auch sagen: in Ländern mit hoher Korruption sorgt hohe Bildung dafür, dass man den poltischen Eliten weniger Vertraut. In Ländern mit wenig Korruption wirkt Bildung dagegen positiv auf das Vertrauen. 
+Man kann auch sagen: in Ländern mit hoher Korruption sorgt hohe Bildung dafür, dass man den politischen Eliten weniger Vertraut. In Ländern mit wenig Korruption wirkt Bildung dagegen positiv auf das Vertrauen. 
 
 
 # Schluss
 
 Wir haben unser Mehrebenenmodell um einen variierenden Slope ergänzt und haben gesehen, dass ein Teil der Unterschiede in der Varianz dieses random Effects mit einer Cross-Level Interaktion erklärt werden kann.
 
-Im nächsten Video 5 werden wir uns anschauen, wie man die Ergebnisse der unterschiedlichen Varianten der Mehrebenenregression am bestn aufbereitet und tabellarisch und grafisch darstellt. 
+Im nächsten Video 6 werden wir uns anschauen, wie man die Ergebnisse der unterschiedlichen Varianten der Mehrebenenregression am besten aufbereitet und tabellarisch und grafisch darstellt. 
 
 Noch ein Hinweis: Wichtig ist, dass man nicht einfach beliebige Ebene 1 Prädiktoren variieren lässt. Nur wo es eine Relevanz für die Forschungsfrage hat und nur dann, wenn auch die Theorie eine begründete Hypothese zulässt, nur dann werden variierende Slopes im Modell spezifiziert.
 
 
+# Aufgabe
+
+- Prüfen Sie zu einer eigenen Fragestellung, ob ein variierender Slope das Modell signifikant verbessert. 
+
+- Prüfen Sie zur eigenen Fragestellung, ob eine Cross-Level Interaktion vorliegt. 
+
+#	Lernzielabgleich
+
+Haben Sie alles mitgenommen? Fragen Sie sich selbst, ob Sie die folgenden Lernziele erreicht haben: 
+
+- Sie können Modelle mit variierenden Slopes und Cross Level Interaktionen als Mehrebenengleichung formulieren.
+- Sie können Modelle mit variierenden Slopes und Cross Level Interaktionen in R umsetzen können.
+- Sie können verschiedene empirische Modelle miteinander vergleichen und entscheiden, welche Modellvariante die passende ist. 
+
 
 ```{r, echo=F, eval=F}
 library("knitr")
-knitr::purl("Mreg4.Rmd",
+knitr::purl("Mreg5.Rmd",
             documentation=0)
 ```
